# wasmer

./: Cargo.toml
.github/workflows/: rust-ci.yml
lib/api/: Cargo.toml
lib/api/src/sys/: store.rs
lib/c-api/: Cargo.toml
lib/cache/: Cargo.toml
lib/cli/: Cargo.toml
lib/compiler/: Cargo.toml
lib/compiler-cranelift/: Cargo.toml
lib/compiler-llvm/: Cargo.toml
lib/compiler-singlepass/: Cargo.toml
lib/derive/: Cargo.toml
lib/emscripten/: Cargo.toml
lib/engine/: Cargo.toml
lib/engine-dylib/: Cargo.toml
lib/engine-staticlib/: Cargo.toml
lib/engine-universal/: Cargo.toml
lib/engine-universal/src/: artifact.rs
lib/middlewares/: Cargo.toml
lib/object/: Cargo.toml
lib/types/: Cargo.toml
lib/vfs/: Cargo.toml
lib/vm/: Cargo.toml
lib/vm/src/instance/: mod.rs
lib/vm/src/trap/: trapcode.rs
lib/wasi/: Cargo.toml
lib/wasi-experimental-io-devices/: Cargo.toml
lib/wasi-types/: Cargo.toml
scripts/: publish.py
tests/compilers/: deterministic.rs
tests/integration/cli/: Cargo.toml
tests/integration/ios/: Cargo.toml
tests/lib/engine-dummy/: Cargo.toml
tests/lib/wast/: Cargo.toml
tests/wasi-wast/: Cargo.toml
