[package]
name = "wasmer-c-api"
version.workspace = true
description = "Wasmer C API library"
categories = ["wasm", "api-bindings"]
keywords = ["wasm", "webassembly", "runtime"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
documentation = "https://wasmerio.github.io/wasmer/c-api/"
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
# The library name is `wasmer` so that we generate dylib like
# `libwasmer.so`, `libwasmer.dylib`, `wasmer.dll` etc. But it creates
# a conflict with the existing `wasmer` crate, see below.
name = "wasmer" # ##lib.name##
                # ^ DO NOT REMOVE, it's used the `Makefile`, see `build-docs-capi`.
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# We rename `wasmer` to `wasmer-api` to avoid the conflict with this
# library name (see `[lib]`).
wasmer-api = { path = "../api", default-features = false, features = ["sys"], package = "wasmer" }
wasmer-compiler-cranelift = { path = "../compiler-cranelift", optional = true }
wasmer-compiler-singlepass = { path = "../compiler-singlepass", optional = true }
wasmer-compiler-llvm = { path = "../compiler-llvm", optional = true }
wasmer-emscripten = { path = "../emscripten", optional = true }
wasmer-engine = { path = "../engine" }
wasmer-engine-universal = { path = "../engine-universal", optional = true }
wasmer-engine-dylib = { path = "../engine-dylib", optional = true }
wasmer-engine-staticlib = { path = "../engine-staticlib", optional = true }
wasmer-middlewares = { path = "../middlewares", optional = true }
wasmer-wasi = { path = "../wasi", default-features = false, features = ["host-fs", "sys"], optional = true }
wasmer-types = { path = "../types" }
enumset = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"
typetag = { version = "0.1", optional = true }
paste = "1.0"

[dev-dependencies]
field-offset = "0.3.3"
inline-c = "0.1.5"

[features]
default = [
    "wat",
    "cranelift",
    "universal",
    "wasi",
    "middlewares",
]
wat = ["wasmer-api/wat"]
wasi = ["wasmer-wasi"]
engine = []
middlewares = [
    "compiler",
    "wasmer-middlewares",
]
universal = [
    "wasmer-engine-universal",
    "engine",
]
dylib = [
    "wasmer-engine-dylib",
    "engine",
]
staticlib = [
    "wasmer-engine-staticlib",
    "engine",
]
compiler = [
    "wasmer-api/compiler",
    "wasmer-engine-universal/compiler",
    "wasmer-engine-dylib/compiler",
    "wasmer-engine-staticlib/compiler"
]
singlepass = [
    "wasmer-compiler-singlepass",
    "compiler",
]
cranelift = [
    "wasmer-compiler-cranelift",
    "compiler",
]
llvm = [
    "wasmer-compiler-llvm",
    "compiler",
]

# Deprecated features.
jit = ["universal"]
native = ["dylib"]

# TODO: Port this feature.
#emscripten = ["wasmer-emscripten"]

[build-dependencies]
cbindgen = "0.19"