[package]
name = "wasmer-engine-dylib"
version.workspace = true
description = "Wasmer Dylib Engine"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "engine", "dylib"]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer-types = { path = "../types" }
wasmer-compiler = { path = "../compiler" }
wasmer-vm = { path = "../vm", features = ["enable-rkyv"] }
wasmer-engine = { path = "../engine" }
wasmer-object = { path = "../object" }
serde = { version = "1.0", features = ["derive", "rc"] }
cfg-if = "1.0"
tracing = { version = "0.1", features = ["log"] }
leb128 = "0.2"
libloading = "0.7"
tempfile = "3.1"
which = "4.0"
rkyv = { git = "https://github.com/klever-io/rkyv.git", version = "0.7.45" }
loupe = { git = "https://github.com/klever-io/loupe" }
enumset = "1.0"
enum-iterator = "0.7.0"
object = { version = "0.32", default-features = false, features = ["write"] }

[features]
# Enable the `compiler` feature if you want the engine to compile
# and not be only on headless mode.
compiler = ["wasmer-compiler/translator"]

[badges]
maintenance = { status = "actively-developed" }
