[package]
name = "wasmer-engine-staticlib"
version = "2.2.2"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "Wasmer Staticlib Engine"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer-types = { path = "../types" }
wasmer-compiler = { path = "../compiler" }
wasmer-vm = { path = "../vm" }
wasmer-engine = { path = "../engine" }
wasmer-object = { path = "../object" }
serde = { version = "1.0", features = ["derive", "rc"] }
cfg-if = "1.0"
tracing = "0.1"
bincode = "1.3"
leb128 = "0.2"
libloading = "0.7"
tempfile = "3.1"
loupe = { git = "https://github.com/klever-io/loupe" }
enumset = "1.0"

[features]
# Enable the `compiler` feature if you want the engine to compile
# and not be only on headless mode.
compiler = ["wasmer-compiler/translator"]

[badges]
maintenance = { status = "actively-developed" }
