[package]
name = "wasmer-middlewares"
version = "2.2.2"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "A collection of various useful middlewares"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/wasmerio/wasmer"
readme = "README.md"
edition = "2018"

[dependencies]
wasmer = { path = "../api", default-features = false, features = ["compiler"] }
wasmer-types = { path = "../types" }
wasmer-vm = { path = "../vm" }
loupe = { git = "https://github.com/klever-io/loupe" }

[dev-dependencies]
wasmer = { path = "../api", features = ["compiler"] }

[badges]
maintenance = { status = "actively-developed" }
