[package]
name = "wasmer-integration-tests-cli"
version.workspace = true
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "CLI integration tests"
repository = "https://github.com/wasmerio/wasmer"
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
tempfile = "3"
