[package]
name = "wasmer-engine-dummy"
version = "2.2.2"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "Wasmer placeholder engine"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
wasmer-types = { path = "../../../lib/types" }
wasmer-compiler = { path = "../../../lib/compiler" }
wasmer-vm = { path = "../../../lib/vm" }
wasmer-engine = { path = "../../../lib/engine" }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_bytes = { version = "0.11", optional = true }
bincode = { version = "1.2", optional = true }
loupe = { git = "https://github.com/klever-io/loupe" }
enumset = "1.0"

[features]
# Enable the `compiler` feature if you want the engine to compile
# and not be only on headless mode.
default = ["serialize", "compiler"]
compiler = ["wasmer-compiler/translator"]
serialize = ["serde", "serde_bytes", "bincode"]

[badges]
# TODO: publish this crate again and deprecate it
maintenance = { status = "actively-developed" }
