[package]
name = "wasmer-wast"
version.workspace = true
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "wast testing support for wasmer"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["wasm", "webassembly"]
repository = "https://github.com/wasmerio/wasmer"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
wasmer = { path = "../../../lib/api", default-features = false, features = ["experimental-reference-types-extern-ref"] }
wasmer-wasi = { path = "../../../lib/wasi" }
wasmer-vfs = { path = "../../../lib/vfs" }
wast = "38.0"
serde = "1"
tempfile = "3"
thiserror = "1.0"

[features]
default = ["wat"]
wat = ["wasmer/wat"]

[badges]
maintenance = { status = "actively-developed" }
